--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                         <!-- <a class="navbar-brand" href="#">Hidden brand</a> -->
                         <ul class="navbar-nav mr-auto mt-2 mt-lg-0 mx-auto">
                             <li class="nav-item">
-                                <a class="nav-link text-white menu-nav-link" href="#">АФИША</a>
+                                <a class="nav-link text-white menu-nav-link" href="afisha/afisha.html">АФИША</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white menu-nav-link" href="#">МЕНЮ</a>
+                                <a class="nav-link text-white menu-nav-link" href="menu/menu.html">МЕНЮ</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white menu-nav-link" href="#">НОВОСТИ</a>
